--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+        <title>PresupuestoFranciscoAMP Repaso 2020</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <div class="jumbotron text-center">
+        <h1>PresupuestoFranciscoAMP Repaso 2020</h1>
+        <br><br>
+        <p>by &REG;Francisco Antonio Murillo Pacheco &COPY;2020</p> 
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <h3>Versiones - Seguro</h3>
+                    <ul>
+                        <li><a href="JSP/JSP/index.jsp">Seguro JSP</a></li>
+                        <li><a href="JSP/JSPLE/index.jsp">Seguro JSP Lenguaje de Expresiones.</a></li>
+                    </ul>
+                </div>            
+            </div>
+        </div>
+        
     </body>
 </html>
